# DDD-CCC

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  primitives.py  pyproject.toml
.claude/skills/: _manifest.yaml
.claude/skills/adapter-design/: SKILL.md
.claude/skills/cube/: SKILL.md
.claude/skills/dashboard-design/: SKILL.md
.claude/skills/datum-design/: SKILL.md
.claude/skills/metric-design/: SKILL.md
.claude/skills/observation-design/: SKILL.md
.claude/skills/sweep-design/: SKILL.md
.claude/skills/transducer-design/: SKILL.md
s3/: __init__.py  combinatorial_complex.py
s3/cubes/: README.md  __init__.py  cli.py  combinatorial_complex.py  dashboard.py  element_algebra.py  element_cube.py  gate_system.py  manifest.py  measure.py  run_network.py  run_proofs.py  skill_support.py  sweep.py
s3/cubes/adapters/: __init__.py  base.py  csharp_unity.py  filesystem_code.py  filesystem_markdown.py  greenfield_jsonl.py  obsidian_vault.py  regency.py
s3/cubes/adapters/services/: README.md  __init__.py  _seed.py  csharp_namespace.py  csharp_usings.py  regency_refs.py
s3/cubes/adapters/tests/: __init__.py  csharp_unity_test.py  obsidian_vault_test.py  regency_test.py
s3/cubes/datums/: __init__.py  base.py  composer.py  schema.py
s3/cubes/datums/packs/: __init__.py  staleness.py
s3/cubes/extractors/: __init__.py  chunk.py  links.py  metadata.py
s3/cubes/ir/: __init__.py  graph.py
s3/cubes/metrics/: __init__.py  base.py  coverage.py  frustration.py  richness.py  vacuum.py
s3/cubes/metrics/tests/: __init__.py  vacuum_test.py
s3/cubes/placement/: __init__.py  decide.py  emit.py  suggest.py
s3/cubes/profile/: __init__.py  axis_convention.py  axis_proposer.py  card.py  invariants.py
s3/cubes/proofs/: __init__.py  adapter_proof.py  datum_proof.py  harness.py  metric_proof.py
s3/cubes/skill_tests/fixtures/csharp_unity_mini/: Clean.cs  Orphan.cs  README.md  Root.cs  Systems.cs
s3/cubes/skill_tests/fixtures/obsidian_vault_mini/: README.md  entropy.md  index.md  signal.md
s3/cubes/skill_tests/fixtures/regency_mini/: README.md
s3/cubes/skill_tests/fixtures/regency_mini/REGENCY-001-root/: goal.md  pre-conditions.md
s3/cubes/skill_tests/fixtures/regency_mini/REGENCY-002-consumer/: goal.md  pre-conditions.md
s3/cubes/skill_tests/fixtures/regency_mini/REGENCY-003-orphan/: goal.md  pre-conditions.md
s3/cubes/skill_tests/fixtures/vacuum_metric_mini/: fixture.py
s3/cubes/stores/: __init__.py  base.py  memory.py
